# ch57x-keyboard-tool

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PR_DESCRIPTION.md  README.md  example-mapping-2.yaml  example-mapping.yaml  mapping.yaml  run.sh
.github/workflows/: release.yml
doc/: actions.md
src/: config.rs  consts.rs  gui_main.rs  keyboard.rs  lib.rs  main.rs  options.rs  parse.rs
src/keyboard/: k8840.rs  k8842.rs  k884x.rs  k8850.rs  k8850_4x4.rs  k8880.rs  k8890.rs  mod.rs
