[package]
name = "ch57x-keyboard-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
itertools = "0.10"
enumset = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2"
serde_yaml = "0.9"
nom = "7.1"
strum = "0.24"
strum_macros = "0.24"
indoc = "1.0"
