[package]
name = "ch57x-keyboard-tool"
version = "1.5.4"
edition = "2021"
description = "Command-line tool for programming ch57x keyboard"
license = "MIT OR Apache-2.0"
keywords = ["keyboard", "keypad", "firmware", "ch57x"]
categories = ["command-line-utilities", "hardware-support"]
homepage = "https://github.com/kriomant/ch57x-keyboard-tool"
repository = "https://github.com/kriomant/ch57x-keyboard-tool.git"
documentation = "https://docs.rs/crate/ch57x-keyboard-tool"

[dependencies]
rusb = "0.9"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
itertools = "0.10"
enumset = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "2.2"
serde_yaml = "0.9"
nom = "7.1"
strum = "0.24"
strum_macros = "0.24"
indoc = "1.0"
once_cell = "1.17.0"
